gitops/apps/simple-time-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-time-service
  labels:
    app: simple-time-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-time-service
  template:
    metadata:
      labels:
        app: simple-time-service
    spec:
      containers:
        - name: simple-time-service
          image: karthikbm2k25/simple-time-service:1.1.2
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
