gitops/apps/simple-time-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-time-service
  labels:
    app: simple-time-service
    release: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: metrics
  selector:
    app: simple-time-service
